# eLinux_GPIO

./: .gitignore  CMakeLists.txt  README.md
include/: gpio.h  pinmap.h
src/: gpio.cpp
test/: CMakeLists.txt  test.cpp
